--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zenn-qiita-content",
   "version": "1.0.0",
   "description": "For centralized management of my Zenn and Qiita articles",
-  "author": "ot07",
+  "author": "yuhara-4113-ai",
   "scripts": {
     "ztoq": "ts-node scripts/ztoq.ts",
     "format": "prettier --write .",
@@ -17,21 +17,21 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@qiita/qiita-cli": "^0.3.0",
-    "@types/git-url-parse": "^9.0.1",
-    "@types/js-yaml": "^4.0.5",
-    "@types/node": "^20.4.0",
-    "@types/yargs": "^17.0.24",
-    "git-url-parse": "^13.1.0",
+    "@qiita/qiita-cli": "^1.6.1",
+    "@types/git-url-parse": "^9.0.3",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^22.9.1",
+    "@types/yargs": "^17.0.33",
+    "git-url-parse": "^16.0.0",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "opener": "^1.5.2",
-    "prettier": "^3.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "wait-on": "^7.0.1",
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
+    "wait-on": "^8.0.1",
     "yargs": "^17.7.2",
-    "zenn-cli": "^0.1.144"
+    "zenn-cli": "^0.1.158"
   }
 }
